overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 .App{
    /* overflow:scroll; */
-  -webkit-overflow-scrolling: touch;
-  overflow-x: hidden;
+  /* -webkit-overflow-scrolling: touch; */
+  /* overflow-y: hidden; */
   width: 100vw;
 }
